[project]
name = "comfyui-styles_csv_loader_zh"
description = "This extension allows users to load styles from a CSV file, supporting Chinese."
version = "1.0.0"
license = { file = "LICENSE" }

dependencies = [
    "requests>=2.25.0",
    "googletrans==4.0.0-rc1",
    "deep-translator>=1.9.1"
]

[project.urls]
Repository = "https://github.com/assemly/comfyui-styles_csv_loader_zh.git"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "assemly"  # 请替换为你的 ComfyUI Registry 账号名
DisplayName = "ComfyUI Styles CSV Loader (ZH)"
Icon = ""
