[project]
name = "comfyui-styles_csv_loader_zh"
description = """
This extension allows users to load styles from a CSV file, supporting Chinese.

在ComfyUI中加载中添加以下节点之一：
- `Load Styles CSV` (加载风格CSV文件)
- `Multi Styles CSV` (多风格合并节点)
- `Preview Text` (预览文本节点)
"""
version = "1.0.2"
license = { file = "LICENSE" }

dependencies = [
    "requests>=2.25.0",
    "googletrans==4.0.0-rc1",
    "deep-translator>=1.9.1"
]

[project.urls]
Repository = "https://github.com/assemly/comfyui-styles_csv_loader_zh.git"
# Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "assemly"  # 请替换为你的 ComfyUI Registry 账号名
DisplayName = "ComfyUI Styles CSV Loader (ZH)"
Icon = ""  # 如果有图标，请填写图标文件路径，否则可以删除这一行
